--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/wear_primary_variant"
-    tools:context="com.adnagu.activityrecognition.ui.main.MainActivity">
+    tools:context="com.adnagu.activityrecognition.ui.MainActivity">
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/content"
