--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -12,4 +12,9 @@
     inner_frame_layout_padding (below variable) on round screens.
     -->
     <dimen name="inner_frame_layout_padding">5dp</dimen>
+
+    <dimen name="default_padding">16dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
+
+    <dimen name="page_margin_bottom">16dp</dimen>
 </resources>
