--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -17,4 +17,6 @@
     <dimen name="default_margin">8dp</dimen>
 
     <dimen name="page_margin_bottom">16dp</dimen>
+    <dimen name="item_activity_padding">8dp</dimen>
+    <dimen name="item_activity_title_size">13sp</dimen>
 </resources>
