Updated some files.

--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -32,7 +32,8 @@
                 android:id="@+id/activityList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin"/>
+                android:layout_marginBottom="@dimen/default_margin"
+                android:scrollbars="vertical"/>
 
         </LinearLayout>
 
