--- a/wear/src/main/res/layout/fragment_activity_recognition.xml
+++ b/wear/src/main/res/layout/fragment_activity_recognition.xml
@@ -10,17 +10,29 @@
     tools:context=".ui.MainActivity"
     tools:deviceIds="wear">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:padding="@dimen/inner_frame_layout_padding"
         app:boxedEdges="all">
+
+        <ImageView
+            style="@style/WindowIcon.Ticwear"
+            android:src="@drawable/ic_activity_recognition"/>
+
+        <ticwear.design.widget.ScalableTextView
+            style="@style/TextAppearance.Ticwear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/section_activity_recognition"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/section_activity_recognition"/>
+            android:text="@string/text_long_content"/>
 
-    </FrameLayout>
+    </LinearLayout>
 
 </android.support.wear.widget.BoxInsetLayout>
