--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -14,9 +14,13 @@
     <dimen name="inner_frame_layout_padding">5dp</dimen>
 
     <dimen name="default_padding">16dp</dimen>
-    <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_margin">4dp</dimen>
+
+    <dimen name="app_bar_title_height">32dp</dimen>
 
     <dimen name="page_margin_bottom">16dp</dimen>
     <dimen name="item_activity_padding">8dp</dimen>
     <dimen name="item_activity_title_size">13sp</dimen>
+
+    <dimen name="view_activity_radius">12dp</dimen>
 </resources>
