--- a/wear/src/main/res/drawable/view_activity.xml
+++ b/wear/src/main/res/drawable/view_activity.xml
@@ -4,5 +4,5 @@
         android:radius="@dimen/view_activity_radius" />
     <stroke
         android:width="1dp"
-        android:color="@color/wear_accent_darken" />
+        android:color="@color/wear_primary" />
 </shape>
