--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -15,11 +15,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/inner_frame_layout_padding"
+        android:gravity="center"
         app:boxedEdges="all">
 
         <ImageView
             style="@style/WindowIcon.Ticwear"
-            android:src="@drawable/ic_record"/>
+            android:src="@drawable/ic_record"
+            android:contentDescription="@string/section_sensor_record"/>
 
         <ticwear.design.widget.ScalableTextView
             style="@style/TextAppearance.Ticwear"
@@ -35,29 +37,47 @@
             android:layout_marginBottom="4dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:background="@color/tic_basic_warm_grey_lighten" />
+            android:background="@color/light_grey" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_activity"
             android:layout_marginTop="@dimen/default_margin"
-            android:padding="6dp"
+            android:background="@drawable/view_activity"
             android:orientation="horizontal">
 
-            <ImageView
-                style="@style/WindowIcon.Ticwear"
-                android:src="@drawable/ic_activity_recognition"/>
+            <ticwear.design.widget.FloatingActionButton
+                style="?tic_iconButtonBarPositiveButtonStyle"
+                android:background="?android:selectableItemBackground"
+                android:id="@+id/button_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:elevation="0dp"
+                android:src="@drawable/ic_record"
+                app:tic_circularDrawableStyle="@style/Widget.Ticwear.CircularProgressDrawable"
+                app:tic_fabSize="mini"/>
 
-            <ticwear.design.widget.ScalableTextView
-                style="@style/TextAppearance.Ticwear"
+            <TextView
+                style="@style/TextAppearance.Ticwear.Caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_gravity="center_vertical"
-                android:text="@string/activity_driving_car"/>
+                android:ellipsize="end"
+                android:text="@string/activity_playing_video_game"
+                android:layout_marginEnd="@dimen/activity_name_margin_right"
+                app:tic_scaleFactor="0.5"/>
 
         </LinearLayout>
+
+        <TextView
+            style="@style/TextAppearance.Ticwear.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin"
+            android:text="@string/click_to_record"
+            android:gravity="center"/>
 
     </LinearLayout>
 
