--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -22,5 +22,6 @@
     <dimen name="item_activity_padding">8dp</dimen>
     <dimen name="item_activity_title_size">13sp</dimen>
 
-    <dimen name="view_activity_radius">12dp</dimen>
+    <dimen name="view_activity_radius">48dp</dimen>
+    <dimen name="activity_name_margin_right">12dp</dimen>
 </resources>
