--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -33,10 +33,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp"
+            android:layout_margin="@dimen/default_margin"
             android:background="@color/light_grey" />
 
         <LinearLayout
@@ -62,6 +59,7 @@
                 app:tic_fabSize="mini"/>
 
             <TextView
+                android:id="@+id/activity_name"
                 style="@style/TextAppearance.Ticwear.Caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
