--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -14,7 +14,7 @@
     <dimen name="inner_frame_layout_padding">5dp</dimen>
 
     <dimen name="default_padding">16dp</dimen>
-    <dimen name="default_margin">4dp</dimen>
+    <dimen name="default_margin">6dp</dimen>
 
     <dimen name="app_bar_title_height">32dp</dimen>
 
@@ -24,4 +24,6 @@
 
     <dimen name="view_activity_radius">48dp</dimen>
     <dimen name="activity_name_margin_right">12dp</dimen>
+
+    <dimen name="list_item_icon_margin_left">24dp</dimen>
 </resources>
