Added OnClickListener to record button.

--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -73,6 +73,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/record_text"
             style="@style/TextAppearance.Ticwear.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
