--- a/wear/src/main/res/layout/fragment_statistic.xml
+++ b/wear/src/main/res/layout/fragment_statistic.xml
@@ -19,7 +19,8 @@
 
         <ImageView
             style="@style/WindowIcon.Ticwear"
-            android:src="@drawable/ic_statistic"/>
+            android:src="@drawable/ic_statistic"
+            android:contentDescription="@string/section_statistic"/>
 
         <ticwear.design.widget.ScalableTextView
             style="@style/TextAppearance.Ticwear"
@@ -30,8 +31,87 @@
 
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_margin="@dimen/default_margin"
+            android:background="@color/light_grey" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_long_content"/>
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextAppearance.Ticwear.Caption"
+                android:layout_width="@dimen/item_statistic_label_width"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:gravity="end"
+                android:alpha="0.7"
+                android:text="@string/sensor_records" />
+
+            <TextView
+                android:id="@+id/tvSensorRecords"
+                style="@style/TextAppearance.Ticwear.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:textSize="@dimen/tic_text_size_small_2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextAppearance.Ticwear.Caption"
+                android:layout_width="@dimen/item_statistic_label_width"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:gravity="end"
+                android:alpha="0.7"
+                android:text="@string/sensor_values" />
+
+            <TextView
+                android:id="@+id/tvSensorValues"
+                style="@style/TextAppearance.Ticwear.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:textSize="@dimen/tic_text_size_small_2" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextAppearance.Ticwear.Caption"
+                android:layout_width="@dimen/item_statistic_label_width"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:gravity="end"
+                android:alpha="0.7"
+                android:text="@string/database_size" />
+
+            <TextView
+                android:id="@+id/tvDatabaseSize"
+                style="@style/TextAppearance.Ticwear.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:textSize="@dimen/tic_text_size_small_2" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
