--- a/wear/src/main/res/values/dimens.xml
+++ b/wear/src/main/res/values/dimens.xml
@@ -18,7 +18,7 @@
 
     <dimen name="app_bar_title_height">32dp</dimen>
 
-    <dimen name="page_margin_bottom">16dp</dimen>
+    <dimen name="page_bottom_space">16dp</dimen>
     <dimen name="item_activity_padding">8dp</dimen>
     <dimen name="item_activity_title_size">13sp</dimen>
 
@@ -26,4 +26,7 @@
     <dimen name="activity_name_margin_right">12dp</dimen>
 
     <dimen name="list_item_icon_margin_left">24dp</dimen>
+
+    <dimen name="item_statistic_item_margin">4dp</dimen>
+    <dimen name="item_statistic_label_width">80dp</dimen>
 </resources>
