--- a/wear/src/main/res/layout/fragment_statistic.xml
+++ b/wear/src/main/res/layout/fragment_statistic.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="@dimen/inner_frame_layout_padding"
+        android:gravity="center"
         app:boxedEdges="all">
 
         <ImageView
