--- a/wear/src/main/res/layout/fragment_statistic.xml
+++ b/wear/src/main/res/layout/fragment_statistic.xml
@@ -52,7 +52,7 @@
                 android:text="@string/sensor_records" />
 
             <TextView
-                android:id="@+id/tvSensorRecords"
+                android:id="@+id/text_sensor_records"
                 style="@style/TextAppearance.Ticwear.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
                 android:text="@string/database_size" />
 
             <TextView
-                android:id="@+id/tvDatabaseSize"
+                android:id="@+id/text_database_size"
                 style="@style/TextAppearance.Ticwear.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
