--- a/wear/src/main/res/menu/action_drawer_menu.xml
+++ b/wear/src/main/res/menu/action_drawer_menu.xml
@@ -3,4 +3,7 @@
     <item android:id="@+id/menu_reset"
         android:icon="@drawable/ic_reset"
         android:title="@string/reset_database"/>
+    <item android:id="@+id/menu_save_arff"
+        android:icon="@drawable/ic_save"
+        android:title="@string/save_as_arff"/>
 </menu>
