--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wear.widget.BoxInsetLayout
+<androidx.wear.widget.BoxInsetLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -18,57 +18,65 @@
         android:gravity="center"
         app:boxedEdges="all">
 
-        <ImageView
-            style="@style/WindowIcon.Ticwear"
-            android:src="@drawable/ic_record"
-            android:contentDescription="@string/section_sensor_record"/>
-
-        <ticwear.design.widget.ScalableTextView
-            style="@style/TextAppearance.Ticwear"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/section_sensor_record"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_margin="@dimen/default_margin"
-            android:background="@color/light_grey" />
-
         <LinearLayout
+            android:id="@+id/llActiveContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_margin"
-            android:background="@drawable/view_activity"
-            android:orientation="horizontal"
-            android:clipToPadding="false"
-            android:clipChildren="false">
+            android:orientation="vertical">
 
-            <ticwear.design.widget.FloatingActionButton
-                android:id="@+id/button_record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:elevation="0dp"
-                android:src="@drawable/ic_activity_recognition"
-                android:clickable="true"
-                android:focusable="true"
-                app:tic_borderWidth="0dp"
-                app:tic_circularDrawableStyle="@style/Widget.Ticwear.CircularProgressDrawable"
-                app:tic_fabSize="mini"/>
+            <ImageView
+                style="@style/WindowIcon.Ticwear"
+                android:src="@drawable/ic_record"
+                android:contentDescription="@string/section_sensor_record"/>
 
-            <TextView
-                android:id="@+id/text_activity_name"
-                style="@style/TextAppearance.Ticwear.Caption"
+            <ticwear.design.widget.ScalableTextView
+                style="@style/TextAppearance.Ticwear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:text="@string/activity_playing_video_game"
-                android:layout_marginEnd="@dimen/activity_name_margin_right"
-                app:tic_scaleFactor="0.5"/>
+                android:text="@string/section_sensor_record"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_margin="@dimen/default_margin"
+                android:background="@color/light_grey" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin"
+                android:background="@drawable/view_activity"
+                android:orientation="horizontal"
+                android:clipToPadding="false"
+                android:clipChildren="false">
+
+                <ticwear.design.widget.FloatingActionButton
+                    android:id="@+id/button_record"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:elevation="0dp"
+                    android:src="@drawable/ic_activity_recognition"
+                    android:clickable="true"
+                    android:focusable="true"
+                    app:tic_borderWidth="0dp"
+                    app:tic_circularDrawableStyle="@style/Widget.Ticwear.CircularProgressDrawable"
+                    app:tic_fabSize="mini"/>
+
+                <TextView
+                    android:id="@+id/text_activity_name"
+                    style="@style/TextAppearance.Ticwear.Caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center_vertical"
+                    android:ellipsize="end"
+                    android:text="@string/activity_playing_video_game"
+                    android:layout_marginEnd="@dimen/activity_name_margin_right"
+                    app:tic_scaleFactor="0.5"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -83,4 +91,4 @@
 
     </LinearLayout>
 
-</android.support.wear.widget.BoxInsetLayout>
+</androidx.wear.widget.BoxInsetLayout>
