--- a/wear/src/main/res/layout/fragment_statistic.xml
+++ b/wear/src/main/res/layout/fragment_statistic.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.wear.widget.BoxInsetLayout
+<androidx.wear.widget.BoxInsetLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -35,6 +35,32 @@
             android:layout_height="0.5dp"
             android:layout_margin="@dimen/default_margin"
             android:background="@color/light_grey" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextAppearance.Ticwear.Caption"
+                android:layout_width="@dimen/item_statistic_label_width"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:gravity="end"
+                android:alpha="0.7"
+                android:text="@string/activity_records" />
+
+            <TextView
+                android:id="@+id/text_activity_records"
+                style="@style/TextAppearance.Ticwear.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/item_statistic_item_margin"
+                android:singleLine="true"
+                android:textSize="@dimen/tic_text_size_small_2" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -90,4 +116,4 @@
 
     </LinearLayout>
 
-</android.support.wear.widget.BoxInsetLayout>
+</androidx.wear.widget.BoxInsetLayout>
