--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -19,7 +19,7 @@
         app:boxedEdges="all">
 
         <LinearLayout
-            android:id="@+id/llActiveContent"
+            android:id="@+id/active_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
