--- a/wear/src/main/res/layout/activity_list.xml
+++ b/wear/src/main/res/layout/activity_list.xml
@@ -15,7 +15,7 @@
 
         <ticwear.design.widget.ScalableTextView
             style="?android:windowTitleStyle"
-            android:id="@android:id/title"
+            android:type="@android:type/title"
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:gravity="center"
@@ -28,7 +28,7 @@
 
     <ticwear.design.widget.TicklableRecyclerView
         style="@style/Widget.Ticwear.ListView"
-        android:id="@+id/list"
+        android:type="@+type/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
