Changed record button.

--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -57,7 +57,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:elevation="0dp"
-                    android:src="@drawable/ic_activity_recognition"
+                    android:src="@drawable/ic_using_computer"
+                    android:tint="@android:color/white"
                     android:clickable="true"
                     android:focusable="true"
                     app:tic_borderWidth="0dp"
