Updated ambient mode in SensorRecordFragment.

--- a/wear/src/main/res/layout/fragment_sensor_record.xml
+++ b/wear/src/main/res/layout/fragment_sensor_record.xml
@@ -37,6 +37,7 @@
             android:background="@color/light_grey" />
 
         <LinearLayout
+            android:id="@+id/layout_activity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_margin"
